# book2tts

./: .dockerignore  .gitignore  Dockerfile  README.md  book2tts.frame0  entrypoint.sh  pyproject.toml
.github/workflows/: docker-build.yml
docker/: .env.example  Caddyfile  docker-compose.yaml
src/book2tts/: __init__.py  __main__.py  audio_utils.py  audiobook.py  batch_process.py  books.py  chapter_service.py  dialogue_service.py  dify.py  ebook.py  edge_tts.py  edgetts.py  llm.py  llm_service.py  long_tts.py  multi_voice_tts.py  ocr.py  parse.py  pdf.py  single_process.py  storage.py  tts.py  ui.py
src/book2tts/web/book_tts/: asgi.py  settings.py  urls.py
src/book2tts/web/home/: views.py
src/web/: debug_final_after_clean.xml  manage.py  test_ocr_points.py  user_token_1b7865c5_original_feed.xml
src/web/book_tts/: celery.py  context_processors.py  dynamic_storage.py  forms.py  settings.py  turnstile.py  urls.py  views.py  wsgi.py
src/web/home/: admin.py  apps.py  context_processors.py  models.py  urls.py  views.py
src/web/home/migrations/: 0001_initial.py  0002_operationrecord.py  0003_userquota_points_and_more.py  0004_pointsconfig.py  0005_remove_old_quota_fields.py  0006_siteconfig_alter_pointsconfig_operation_type.py  0007_comment_discussiontopic.py  0008_siteconfig_s3_access_key_id_and_more.py
src/web/home/tests/: test_points_integration.py
src/web/home/utils/: __init__.py  cache_utils.py  rss_utils.py  utils.py
src/web/static/: htmx.min.js  pages-component.css  pages-component.js
src/web/storage/: README.md  __init__.py  adapters.py  config.py  storage.py
src/web/theme/static_src/: package-lock.json  tailwind.config.js
src/web/theme/templates/: base.html  task_queue.html
src/web/workbench/: admin.py  apps.py  forms.py  middleware.py  models.py  tasks.py  tests.py  urls.py  views.py
src/web/workbench/migrations/: 0001_initial.py  0002_books_uid.py  0003_books_file_type_books_name.py  0004_audiosegment.py  0005_audiosegment_published.py  0006_merge_0005_audiosegment_published_assign_to_superuser.py  0007_remove_audiosegment_uid_remove_books_uid_and_more.py  0008_assign_data_to_superuser.py  0009_add_timestamp_fields.py  0010_remove_audiosegment_user_alter_books_user_and_more.py  0011_audiosegment_user.py  0012_usertask.py  0013_add_md5_hash_to_books.py  0013_books_md5_hash.py  0014_calculate_existing_books_md5.py  0015_merge_20250708_1455.py  0016_dialoguescript_voicerole_dialoguesegment.py  0017_audiosegment_subtitle_file_and_more.py  (+10 more)
(+51 files in other folders)
