[project]
name = "book2tts"
version = "0.1.0"
description = "Book to TTS"
authors = [
    { name = "pingfury", email = "pingfury@outlook.com" }
]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "ebooklib>=0.18",
    "gradio>=4.44.1",
    "edge-tts>=6.1.12",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/book2tts"]

[tool.pyright]
extraPaths = [".venv/lib/python3.12/"]
