[project]
name = "book2tts"
version = "0.1.0"
description = "Book to TTS"
authors = [
    { name = "pingfury", email = "pingfury@outlook.com" }
]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "ebooklib>=0.18",
    "edge-tts>=6.1.14",
    "gradio>=4.44.1",
    "dify-client>=0.1.10",
    "google-generativeai>=0.8.3",
    "pymupdf>=1.24.12",
    "volcengine>=1.0.157",
    "django>=5.1.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/book2tts"]

[tool.pyright]
extraPaths = [".venv/lib/python3.12/"]
