[project]
name = "book2tts"
version = "0.1.0"
description = "Book to TTS"
authors = [
    { name = "pingfury", email = "pingfury@outlook.com" }
]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "ebooklib>=0.18",
    "edge-tts>=6.1.15",
    "gradio>=4.44.1",
    #"dify-client>=0.1.12",
    "google-generativeai>=0.8.3",
    "pymupdf>=1.24.12",
    "volcengine>=1.0.157",
    "django>=5.1.2",
    "dify-client @ https://tmpf.pingfury.top/dify-client-0.1.12.tar.gz",
    "django-tailwind[reload]>=3.8.0",
    "pip>=24.2",
    "django-htmx>=1.21.0",
    "opendal>=0.45.11",
    "click>=8.1.7",
    "lxml>=5.3.0",
    "azure-cognitiveservices-speech>=1.41.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/book2tts", "src/web"]

[tool.pyright]
extraPaths = [".venv/lib/python3.12/"]
